src/styles/index.scss
@import "utilities";
@import "components";

* {
  margin: 0;
  color: inherit;
}
body {
  height: 100vh;
  background-color: $grey;
  overflow: hidden;
}

.App {
  $paddingY: 2rem;

  padding: $paddingY 1.5rem;
  height: calc(100vh - $paddingY * 2);

  @include center;
  background-repeat: no-repeat;
  background-size: cover;
  animation: pan 60s linear infinite;

  @keyframes pan {
    0% {
      background-position: 10% 90%;
    }

    100% {
      background-position: 90% 90%;
    }
  }

  @media (min-width: 768px) {
    $paddingY: 5rem;

    padding: $paddingY 3.5rem;
    height: calc(100vh - $paddingY * 2);
  }
    
  &_main {
    height: 100%;
    width: min(100%, 1100px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    &_bottom {
      display: flex;
      flex-direction: column;
      gap: 3rem;
      transition-duration: 200ms;


      @media (min-width: 768px) {
        gap: 5rem;
      }
      
      @media (min-width: 1024px) {
        gap: unset;
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-end;
      }
    }
  }
}

